--- a/amanda.html
+++ b/amanda.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.jpg">
+    <link rel="stylesheet" href="amanda.css">
     <title>Curriculo Amanda Marcos</title>
 </head>
 
-<body>
+<body id="principal">
     <h1>AMANDA KAORI KASITA MARCOS</h1>
 
-    <img src="322992162_144158151525807_3007976624781289657_n.jpg" 
+    <img id="profilepic" src="322992162_144158151525807_3007976624781289657_n.jpg" 
     width="200px"
     alt="Foto de perfil">
 
@@ -25,7 +26,7 @@
     
     <hr>
 
-    <h2>OBEJTIVO</h2>
+    <h2>OBJETIVO</h2>
     <p style="padding-left: 20px;">Buscando uma oportunidade na área de programação. Focada em aprender, ter novas experiências e desenvolver conhecimentos na área a fim de crescer profissionalmente junto com a empresa.</p>
 
     <img src="em-formacao.png" alt="icon formação" style="padding-left: 20px;">
@@ -53,10 +54,10 @@
 
     <ul>
         <li><b>URTURE – Urbanismo e Meio Ambiente</b></li>
-        <p>09/2019 – 03/2021</p>
-        <p>Cargo: Estagiária</p>
         <p>03/2021 – Atualmente</p>
         <p>Cargo: Engenheira Química</p>
+        <p>09/2019 – 03/2021</p>
+        <p>Cargo: Estagiária</p>
         <li><b>Globo do Brasil</b></li>
         <p>04/2018 – 11/2018</p>
         <p>Cargo: Auxiliar de laboratório</p>
